# Mesh-Voxelization

./: CMakeLists.txt  LICENSE  README.md  fill_occupancy.py  marching_cubes.py  off_loader.cpp  off_loader.h  scale_off.py  voxelization.cpp  voxelization.h  voxelize.cpp
